--- a/myWebApp/index.html
+++ b/myWebApp/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
 
-	    <div class="page home">
+	    <div class="page">
 			<article>
 				<div class="content_container" id="sroll">
 					<div class="content_loading_container">
@@ -39,10 +39,10 @@
 				<div id="map_canvas"></div>	
 			</div>
 			<nav>
-				<a data-file="home.html?v=1">Home</a>
-				<a data-file="video.html?v=1">Video</a>
-				<a data-file="gallery.html?v=1">Gallery</a>
-				<a data-file="contact_us.html?v=1">Contact Us</a>
+				<a data-file="home.html">Home</a>
+				<a data-file="video.html">Video</a>
+				<a data-file="gallery.html">Gallery</a>
+				<a data-file="contact_us.html">Contact Us</a>
 			</nav>
 		</div>
 
