--- a/myWebApp/assets/content/gallery.html
+++ b/myWebApp/assets/content/gallery.html
@@ -1,2 +1,86 @@
+<script type="text/javascript">
+
+	$(document).ready(function(){
+
+		$('.thumbnail img').on(window.eventType, function(){
+			var detailImage = $(this).attr('src');
+			var detailCaption = $(this).parent().find('.caption_text').html();
+			$('.detail img').attr('src',detailImage).removeClass('selected');
+			$('.thumbnails img').removeClass('selected');
+			$(this).addClass('selected');
+			$('.thumbnails .caption').html(detailCaption);
+		});
+
+		$('.thumbnail img').first().trigger(window.eventType);
+
+	});
+
+</script>
+
+
+
 <h1>Gallery</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure reprehenderit in voluptate.</p>
+
+<div class="gallery_container">
+    <div class="detail"><img></div>
+        <div class="thumbnails">
+
+        <!-- Gallery Item -->
+        <div class="thumbnail">
+                <img src="assets/gallery/cupcake_01.jpg" />
+            <div class="caption_text">
+                <h3>Cupcake #1</h3>
+                <p>This is the caption for cupcake #1.</p>
+            </div>
+        </div>
+		<!-- Gallery Item -->
+		<div class="thumbnail">
+			<img src="assets/gallery/cupcake_02.jpg" />
+			<div class="caption_text">
+				<h3>Cupcake #2</h3>
+				<p>Ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+			</div>
+		</div>
+		
+		<!-- Gallery Item -->
+		<div class="thumbnail">
+			<img src="assets/gallery/cupcake_03.jpg" />
+			<div class="caption_text">
+				<h3>Cupcake #3</h3>
+				<p>Elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim ad minim.</p>
+			</div>
+		</div>
+		
+		<!-- Gallery Item -->
+		<div class="thumbnail">
+			<img src="assets/gallery/cupcake_04.jpg" />
+			<div class="caption_text">
+				<h3>Cupcake #4</h3>
+				<p>Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+			</div>
+		</div>
+		
+		<!-- Gallery Item -->
+		<div class="thumbnail">
+			<img src="assets/gallery/cupcake_05.jpg" />
+			<div class="caption_text">
+				<h3>Cupcake #5</h3>
+				<p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+		
+		<!-- Gallery Item -->
+		<div class="thumbnail">
+			<img src="assets/gallery/cupcake_06.jpg" />
+			<div class="caption_text">
+				<h3>Cupcake #6</h3>
+				<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat it.</p>
+			</div>
+		</div>
+
+
+            <div class="caption"></div>
+        </div>
+        <div class="clear"></div>    
+</div>
